Add docker image tag in pom file

--- a/hapi-fhir-jpaserver-example/pom.xml
+++ b/hapi-fhir-jpaserver-example/pom.xml
@@ -255,6 +255,9 @@
 					<buildArgs>
 						<finalName>${project.build.finalName}.war</finalName>
 					</buildArgs>
+					<imageTags>
+						<imageTag>${project.version}</imageTag>
+					</imageTags>
 					<resources>
 						<resource>
 							<targetPath>/</targetPath>
